# reed-solomon

./: CMakeLists.txt  README.md  rs.c
